--- a/main.html
+++ b/main.html
@@ -10,8 +10,8 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-	<main>
-	<h1 class="heading">This is a Heading</h1>
+	<main class="main">
+	<h1 class="heading" id="heading">This is a Heading</h1>
 	</main>
 
 </body>
